--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/monfrair/triviaclub#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "mysql2": "^1.4.2",
+    "path": "^0.12.7",
     "sequelize": "^4.22.4"
   }
 }
