--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/monfrair/triviaclub#readme",
   "dependencies": {
+    "chai": "^4.1.2",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
+    "mocha": "^4.0.1",
     "mysql": "^2.15.0",
     "mysql2": "^1.4.2",
     "sequelize": "^4.22.4"
